k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcc-app
  namespace: app
  labels:
    app: tcc-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tcc-app
  template:
    metadata:
      labels:
        app: tcc-app
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: tcc-app
          image: ghcr.io/cristopherpds/tcc-app:v0.1.7
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
