k8s/tcc-ossn-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcc-ossn-app
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tcc-ossn-app
  template:
    metadata:
      labels:
        app: tcc-ossn-app
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: tcc-ossn-app
        image: ghcr.io/cristopherpds/tcc-ossn-app:v0.5.2
        ports:
        - containerPort: 80
