k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: app
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None  # Esto es necesario para que los pods puedan acceder a través de DNS (mysql-0, mysql-1, etc.)
