k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tcc-app-lb
  namespace: app
  labels:
    app: tcc-app
spec:
  type: LoadBalancer
  selector:
    app: tcc-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
