k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcc-ossn-app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cristopherpds.dev # mi dominio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tcc-ossn-app-service
            port:
              number: 80
